# de-real-time-stream-challenge

./: .gitignore  README.md  main.py  pyproject.toml
de_real_time_stream_challenge/models/: Quotes.py
de_real_time_stream_challenge/src/: config.py  real_time_insights.py  real_time_stream_simulator.py
docs/: part-1-data-ingestion-and-insights.md  part-2-high-level-cloud-architecture-design.md
